Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-3935

failed to destroy mutex sigabrt with sync replication

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 1.7.0
    • 1.7 beta
    • couchbase-bucket
    • Security Level: Public
    • None
    • basestar-357-g96fe7ec
      centos 5.4 64bit
      1 node
      1 vbucket
      running under labrea with slow send/recv

    Description

      Seen with a simple sync replication test (one key) under labrea, not seen so far running without labrea. This same test passed around May 8th, but hasn't really been tested much since with this same test.

      memcached.log:
      terminate called after throwing an instance of 'std::runtime_error'
      what(): MUTEX ERROR: Failed to destroy mutex: Device or resource busy

      backtrace:
      Thread 1 (process 16764):
      #0 0x0000003005830265 in raise () from /lib64/libc.so.6
      #1 0x0000003005831d10 in abort () from /lib64/libc.so.6
      #2 0x00000030176bec44 in _gnu_cxx::_verbose_terminate_handler () from /usr/lib64/libstdc++.so.6
      #3 0x00000030176bcdb6 in ?? () from /usr/lib64/libstdc++.so.6
      #4 0x00000030176bcde3 in std::terminate () from /usr/lib64/libstdc++.so.6
      #5 0x00000030176bceca in __cxa_throw () from /usr/lib64/libstdc++.so.6
      #6 0x00002ac127a02da6 in ~Mutex (this=<value optimized out>) at mutex.hh:49
      #7 0x00002ac127a5de84 in ~SyncListener (this=0x1b602500) at sync_registry.cc:220
      #8 0x00002ac127a35ea3 in syncCmd (e=0x1b5b1600, request=0x1b67ac20, cookie=0x1b602258, response=0x404b20 <binary_response_handler>) at ep_engine.cc:518
      #9 0x00002ac127a369d7 in EvpUnknownCommand (handle=0x1b5b1600, cookie=0x1b602258, request=0x1b67ac20, response=0x404b20 <binary_response_handler>) at ep_engine.cc:787
      #10 0x0000000000406a06 in process_bin_packet (c=0x1b602258) at daemon/memcached.c:2593
      #11 0x0000000000410af5 in complete_nread_binary (c=0x4169) at daemon/memcached.c:3389
      #12 0x0000000000411791 in conn_nread (c=0x1b602258) at daemon/memcached.c:3471
      #13 0x0000000000412bc9 in thread_libevent_process (fd=<value optimized out>, which=<value optimized out>, arg=<value optimized out>) at daemon/thread.c:381
      #14 0x00002ac127567df9 in event_base_loop (base=0x1b5fef30, flags=0) at event.c:1308
      #15 0x0000000000413394 in worker_libevent (arg=0x1b5fda90) at daemon/thread.c:304
      #16 0x00000030064064a7 in start_thread () from /lib64/libpthread.so.0
      #17 0x00000030058d3c2d in clone () from /lib64/libc.so.6

      – labrea script:
      function before_send(fd, ...)
      labrea.usleep(5000000) – 5 seconds
      end

      function after_recv(fd, ...)
      labrea.usleep(5000000) – 5 seconds
      end

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dustin Dustin Sallings (Inactive)
            keith Keith Batten (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty