priority.cc
@@ -32,6 +32,7 @@ const Priority Priority::VBucketPersistLowPriority("vbucket_persist_low_priority
 const Priority Priority::StatSnapPriority("statsnap_priority", 9);
 const Priority Priority::InvalidItemDbPagerPriority("invalid_item_db_pager_priority", 9);
 const Priority Priority::HTResizePriority("hashtable_resize_priority", 211);
+const Priority Priority::SyncDestroyPriority("sync_destroy_priority", 314);
 const Priority Priority::TapResumePriority("tap_resume_priority", 316);
 const Priority Priority::SyncAbortPriority("sync_abort_priority", 316);
 
